--- a/console/src/pages/Agent/Pipelines/index.module.less
+++ b/console/src/pages/Agent/Pipelines/index.module.less
@@ -1,6 +1,6 @@
 .page {
   padding: 24px;
-  height: calc(100vh - 96px);
+  height: calc(100vh - 56px);
   display: flex;
   flex-direction: column;
   gap: 16px;
